force-app/main/default/objects/Care_Assignment__c/Care_Assignment__c.object-meta.xml
<CustomObject>
    <description>Junction object to connect animals, caregivers, and enclosures</description>
    <label>Care Assignment</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Care Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>