force-app/main/default/objects/Care_Assignment__c/fields/Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver</label>
    <referenceTo>Caregiver__c</referenceTo>
    <relationshipLabel>Care Assignments</relationshipLabel>
    <relationshipName>Care_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>