force-app/main/default/objects/Care_Assignment__c/fields/Enclosure__c.field-meta.xml
<CustomField>
    <fullName>Enclosure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enclosure</label>
    <referenceTo>Enclosure__c</referenceTo>
    <relationshipLabel>Care Assignments</relationshipLabel>
    <relationshipName>Care_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>